--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -36,17 +36,37 @@
 }
 
 .settingInput {
-  flex: 0 0 200px;
   display: flex;
   justify-content: flex-end;
 }
 
-.setting-input input,
-.setting-input select {
-  width: 100%;
+.settingInput input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  accent-color: #ffffff; /* Green color */
+  border-radius: 4px;
+}
+
+.settingInput select {
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #555;
   background-color: #1a1a1a;
   color: #fff;
+  cursor: pointer;
+}
+
+.installButton {
+  background-color: #ffffff; /* Green */
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
 }
