--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -37,7 +37,9 @@
 
 .settingInput {
   display: flex;
+  flex-direction: column;
   justify-content: flex-end;
+  width: 40%;
 }
 
 .settingInput input[type="checkbox"] {
@@ -48,13 +50,24 @@
   border-radius: 4px;
 }
 
-.settingInput select {
+.settingInput select,
+.settingInput input[type="number"] {
   padding: 5px;
-  border-radius: 4px;
+  border-radius: 8px;
+  margin: 6px 0;
   border: 1px solid #555;
-  background-color: #1a1a1a;
-  color: #fff;
+  background-color: #ffff;
+  font-size: 15px;
+  width: 100%;
+  color: black;
   cursor: pointer;
+}
+
+.installButtons {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
 }
 
 .installButton {
@@ -69,4 +82,27 @@
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.111);
+  transition: transform 0.2s, box-shadow 0.2s, opacity 0.2s;
+}
+
+.installButton:hover {
+  transform: scale(1.02);
+  box-shadow: 0 8px 16px rgba(255, 255, 255, 0.225);
+}
+
+.installButton:active {
+  transform: scale(0.98);
+}
+
+.cachedStreamsSection {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+  opacity: 0;
+}
+
+.cachedStreamsSection.show {
+  max-height: 200px; /* Adjust based on the content height */
+  opacity: 1;
 }
