--- a/packages/frontend/src/components/AddonsList.module.css
+++ b/packages/frontend/src/components/AddonsList.module.css
@@ -6,25 +6,40 @@
 
 .addonSelector {
   display: flex;
+  flex-direction: column;
   gap: 10px;
   margin-bottom: 10px;
 }
 
 .addonSelector select {
   padding: 5px;
-  border-radius: 4px;
+  border-radius: 8px;
   border: 1px solid #555;
-  background-color: #1a1a1a;
-  color: #fff;
+  background-color: white;
+  color: black;
 }
 
 .addonSelector button {
   padding: 5px 10px;
-  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  border-radius: 8px;
   border: none;
   background-color: #ffffff;
   color: #000;
   cursor: pointer;
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.041);
+  transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
+}
+
+.addonSelector button:hover {
+  background-color: #f1f1f1;
+  transform: scale(1.01);
+  box-shadow: 0 4px 8px rgba(206, 206, 206, 0.19);
+}
+
+.addonSelector button:active {
+  transform: scale(0.99);
 }
 
 .card {
@@ -60,8 +75,8 @@
 .option {
   display: flex;
   flex-direction: column;
-  border: 1px solid #555;
-  border-radius: 4px;
+  border: 1px solid #ffffff;
+  border-radius: 8px;
   padding: 10px;
 }
 
@@ -76,8 +91,9 @@
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #555;
-  background-color: #1a1a1a;
-  color: #fff;
+  background-color: #ffffff;
+  color: black;
+  width: 100%;
 }
 
 .option input[type="checkbox"] {
@@ -86,6 +102,7 @@
   cursor: pointer;
   accent-color: #ffffff; /* Green color */
   border-radius: 4px;
+  margin-left: 10px;
 }
 
 .option small {
