--- a/packages/frontend/src/components/SortableCardList.module.css
+++ b/packages/frontend/src/components/SortableCardList.module.css
@@ -8,18 +8,20 @@
 .card {
   background-color: #2a2a2a; /* Slightly lighter black */
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   padding: 10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: background-color ease 0.2s;
-
+  transition: background-color 0.5s ease, opacity 0.5s ease, transform 0.3s ease, scale 0.3s ease, box-shadow 0.6s ease;
+  height: 75px;
 }
 
 .card.disabled {
-  background-color: #555; /* Greyed out */
-  opacity: 0.6;
+  background-color: #222222; /* Greyed out */
+  box-shadow: none;
+  scale: 0.98;
+  opacity: 0.5;
 }
 
 .actions button {
@@ -57,4 +59,8 @@
 .arrowButton:hover {
   transform: scale(1.1);
   cursor: pointer;
+}
+
+.arrowButton:active {
+  transform: scale(0.9);
 }
