--- a/packages/frontend/src/components/SortableCardList.module.css
+++ b/packages/frontend/src/components/SortableCardList.module.css
@@ -13,7 +13,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: background-color 0.5s ease, opacity 0.5s ease, transform 0.3s ease, scale 0.3s ease, box-shadow 0.6s ease;
+  transition:
+    background-color 0.5s ease,
+    opacity 0.5s ease,
+    transform 0.3s ease,
+    scale 0.3s ease,
+    box-shadow 0.6s ease;
   height: 75px;
 }
 
