--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -1,8 +1,16 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+
+.header {
+  text-align: center;
+  max-width: 800px;
+  border-radius: 8px;
+  margin: 20px;
 }
 
 .content {
