--- a/packages/frontend/src/components/AddonsList.module.css
+++ b/packages/frontend/src/components/AddonsList.module.css
@@ -90,7 +90,9 @@
   align-items: center;
 }
 
-.option input[type='text'] {
+.option input[type='text'],
+.option input[type='number']
+{
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #555;
