--- a/packages/frontend/src/components/AddonsList.module.css
+++ b/packages/frontend/src/components/AddonsList.module.css
@@ -94,6 +94,7 @@
 .option input[type='number']
 {
   padding: 5px;
+  margin: 10px 0 1px 0;
   border-radius: 4px;
   border: 1px solid #555;
   background-color: #ffffff;
