feat: add active state css for slider thumb

--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -137,6 +137,18 @@
   transform: scale(1.1);
 }
 
+.slider::-moz-range-thumb:hover {
+  transform: scale(1.1);
+}
+
+.slider::-webkit-slider-thumb:active {
+  transform: scale(0.9);
+}
+
+.slider::-moz-range-thumb:active {
+  transform: scale(0.9);
+}
+
 .settingInput input[type='checkbox'] {
   width: 20px;
   height: 20px;
