refactor(frontend): remove unnecessary css and use borderRadius variable

--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -9,12 +9,12 @@
 .header {
   text-align: center;
   max-width: 800px;
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
 }
 
 .content {
   background-color: #000000; /* Slightly lighter black */
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   box-shadow: 0 8px 16px rgb(0, 0, 0);
   padding: 20px;
   width: 80%;
@@ -33,7 +33,7 @@
   margin-bottom: 20px;
   border-width: 1px;
   border-style: solid;
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   padding: 10px;
   border-color: #777777;
 }
@@ -93,7 +93,7 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   box-shadow: 0 4px 8px rgba(255, 255, 255, 0.111);
   transition:
     transform 0.2s,
@@ -108,18 +108,4 @@
 
 .installButton:active {
   transform: scale(0.98);
-}
-
-.cachedStreamsSection {
-  max-height: 0;
-  overflow: hidden;
-  transition:
-    max-height 0.5s ease,
-    opacity 0.5s ease;
-  opacity: 0;
-}
-
-.cachedStreamsSection.show {
-  max-height: 200px; /* Adjust based on the content height */
-  opacity: 1;
 }
