--- a/packages/frontend/src/components/AddonsList.module.css
+++ b/packages/frontend/src/components/AddonsList.module.css
@@ -11,19 +11,11 @@
   margin-bottom: 10px;
 }
 
-.addonSelector select {
-  padding: 5px;
-  border-radius: 8px;
-  border: 1px solid #555;
-  background-color: white;
-  color: black;
-}
-
 .addonSelector button {
   padding: 5px 10px;
   width: 100%;
   height: 40px;
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   border: none;
   background-color: #ffffff;
   color: #000;
@@ -47,7 +39,7 @@
 
 .card {
   background-color: #1a1a1a; /* Slightly lighter black */
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 10px;
   display: flex;
@@ -78,8 +70,8 @@
 .option {
   display: flex;
   flex-direction: column;
-  border: 1px solid #ffffff;
-  border-radius: 8px;
+  border: 1px solid #a0a0a0;
+  border-radius: var(--borderRadius);
   padding: 10px;
 }
 
@@ -90,27 +82,8 @@
   align-items: center;
 }
 
-.option select,
-.option input[type='text'],
-.option input[type='number']
-{
-  padding: 5px;
-  margin: 10px 0 1px 0;
-  border-radius: 4px;
-  border: 1px solid #555;
-  background-color: #ffffff;
-  color: black;
-  width: 100%;
-}
 
-.option input[type='checkbox'] {
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  accent-color: #ffffff; /* Green color */
-  border-radius: 4px;
-  margin-left: 10px;
-}
+
 
 .option small {
   color: #aaa;
