--- a/packages/frontend/src/components/ServiceInput.module.css
+++ b/packages/frontend/src/components/ServiceInput.module.css
@@ -1,6 +1,6 @@
 .card {
   background-color: #1a1a1a; /* Slightly lighter black */
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   padding: 10px;
   display: flex;
@@ -35,15 +35,6 @@
   align-items: center;
 }
 
-.checkbox {
-  margin-left: 10px;
-  width: 20px;
-  height: 20px;
-  cursor: pointer;
-  accent-color: #ffffff; /* White color */
-  border-radius: 4px;
-}
-
 .serviceName {
   font-size: 1.2em;
   font-weight: bold;
@@ -59,18 +50,4 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-}
-
-.field label {
-  margin-bottom: 5px;
-}
-
-.field input {
-  padding: 5px;
-  border-radius: 6px;
-  font-size: 16px;
-  border: 1px solid #383838;
-  background-color: white;
-  height: 30px;
-  color: black;
 }
