--- a/packages/frontend/src/components/Slider.module.css
+++ b/packages/frontend/src/components/Slider.module.css
@@ -13,7 +13,7 @@
   -webkit-appearance: none;
   appearance: none;
   opacity: 0.85;
-  border-radius: 8px;
+  border-radius: var(--borderRadius);
   height: 15px;
   transition: opacity 0.2s;
   -webkit-tap-highlight-color: transparent;
