--- a/packages/frontend/src/app/globals.css
+++ b/packages/frontend/src/app/globals.css
@@ -25,8 +25,8 @@ body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  color: #979797;
+  text-decoration: underline;
 }
 
 @media (prefers-color-scheme: dark) {
