--- a/packages/frontend/src/components/ServiceInput.module.css
+++ b/packages/frontend/src/components/ServiceInput.module.css
@@ -51,3 +51,29 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.actions {
+  display: flex;
+  align-items: center;
+}
+
+.actionButton {
+  background-color: transparent;
+  border-radius: var(--borderRadius);
+  display: flex;
+  margin: 5px;
+  font-size: 1.2em;
+  align-items: center;
+  border-width: 0;
+  transition: transform 0.2s;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.actionButton:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.actionButton:active {
+  transform: scale(0.9);
+}
