--- a/packages/frontend/src/components/SortableCardList.module.css
+++ b/packages/frontend/src/components/SortableCardList.module.css
@@ -59,3 +59,45 @@
 .arrowButton:active {
   transform: scale(0.9);
 }
+
+.directionBar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(26, 26, 26);
+  border-radius: 0 0 var(--borderRadius) var(--borderRadius);
+  padding: 0;
+  transition: margin-top 0.4s ease, background-color 0.4s ease, opacity 0.4s ease, transform 1s ease, opacity 0.4s ease;
+  margin-top: -10px;
+  z-index: 0;
+}
+
+.directionButton {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  margin: 0;
+  border-radius: 0 0 var(--borderRadius) var(--borderRadius);
+  width: 100%;
+  transition: color 0.4s, background-color 0.4s, transform 1s, opacity 0.4s;
+}
+
+.directionButton:hover {
+  background-color: rgb(26, 26, 26);
+}
+
+.directionButton.disabled {
+  background-color: transparent;
+  color: transparent;
+  opacity: 0.4;
+  transform: scale(0.1)
+}
+
+.directionBar.disabled {
+  background-color: transparent;
+  margin-top: -40px;
+  transform: scale(0.1);
+  opacity: 0.4;
+  border-radius: var(--borderRadius);
+}
