feat: allow keeping encrypted service credentials when going to configure page with existing config

--- a/packages/frontend/src/app/globals.css
+++ b/packages/frontend/src/app/globals.css
@@ -48,6 +48,7 @@ input[type='checkbox'] {
 
 input[type='text'],
 input[type='number'],
+input[type='password'],
 select {
   padding: 5px;
   border-radius: var(--borderRadius);
