--- a/packages/frontend/src/app/globals.css
+++ b/packages/frontend/src/app/globals.css
@@ -35,6 +35,10 @@ a {
   }
 }
 
+button {
+  -webkit-tap-highlight-color: transparent;
+}
+
 input[type='checkbox'] {
   margin-right: 10px;
   margin-left: 10px;
