--- a/packages/frontend/src/components/CredentialInput.module.css
+++ b/packages/frontend/src/components/CredentialInput.module.css
@@ -18,7 +18,9 @@
   color: rgb(104, 104, 104);
   border-radius: var(--borderRadius);
   cursor: pointer;
-  transition: color 0.3s ease, transform 0.2s;
+  transition:
+    color 0.3s ease,
+    transform 0.2s;
 }
 
 .resetCredentialButton:hover {
