feat: add show/hide functionality to credential inputs

--- a/packages/frontend/src/components/CredentialInput.module.css
+++ b/packages/frontend/src/components/CredentialInput.module.css
@@ -31,3 +31,20 @@
 .resetCredentialButton:active {
   transform: scale(0.9) rotateZ(180deg) translateY(2px);
 }
+
+.showHideButton {
+  background-color: transparent;
+  padding-top: 5px;
+  padding-left: 5px;
+  border: none;
+  transition: transform 0.2s;
+}
+
+.showHideButton:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.showHideButton:active {
+  transform: scale(0.9);
+}
