--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -137,23 +137,27 @@
 }
 
 .mediaFlowConfig {
-  border-width: 1px;
-  border-style: solid;
-  border-radius: var(--borderRadius);
-  border-color: #777777;
-  padding: 10px;
   transition:
-    margin-top 0.4s,
-    opacity 0.3s,
-    transform 0.6s;
+    margin-top 0.6s,
+    opacity 0.6s,
+    transform 1s;
 }
 
 .mediaFlowConfig.hidden {
   opacity: 0;
-  margin-top: -340px;
+  margin-top: -655px;
   transform: scale(0);
   transition:
     margin-top 0.5s,
     opacity 0.2s,
     transform 0.4s;
+}
+
+.mediaFlowSection {
+  padding: 10px;
+  margin: 5px;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: var(--borderRadius);
+  border-color: #777777;
 }
