feat: refactor credential input and service input and use different svg for reset icon

--- a/packages/frontend/src/components/CredentialInput.module.css
+++ b/packages/frontend/src/components/CredentialInput.module.css
@@ -1,35 +1,25 @@
 .credentialsInputContainer {
-  position: relative;
   display: flex;
-  align-items: center;
 }
-
-.credentialInput {
-  flex: 1;
-  padding-right: 40px; /* Space for the reset button */
-}
-
 .resetCredentialButton {
-  position: absolute;
-  right: 10px;
+  margin-top: 5px;
+  margin-left: 5px;
   top: 6px;
+  padding: 0;
   background-color: transparent;
   border: none;
-  color: rgb(104, 104, 104);
+  color: rgb(255, 255, 255);
   border-radius: var(--borderRadius);
   cursor: pointer;
-  transition:
-    color 0.3s ease,
-    transform 0.2s;
+  transition: transform 0.2s;
 }
 
 .resetCredentialButton:hover {
-  color: black;
-  transform: scale(1.2) rotateZ(180deg) translateY(2px);
+  transform: scale(1.2);
 }
 
 .resetCredentialButton:active {
-  transform: scale(0.9) rotateZ(180deg) translateY(2px);
+  transform: scale(0.9);
 }
 
 .showHideButton {
@@ -37,11 +27,12 @@
   padding-top: 5px;
   padding-left: 5px;
   border: none;
+  transform: scale(1);
   transition: transform 0.2s;
 }
 
 .showHideButton:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
   cursor: pointer;
 }
 
