--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -59,9 +59,11 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-end;
+  margin: 0 10px;
 }
+
 .settingInput select {
-  width: 100px;
   height: 30px;
 }
 
