--- a/packages/frontend/src/app/configure/page.module.css
+++ b/packages/frontend/src/app/configure/page.module.css
@@ -139,6 +139,16 @@
   font-weight: bold;
   padding: 5px;
   border-radius: var(--borderRadius);
+  transition:
+    scale 0.2s ease,
+    background-color 0.2s ease,
+    transform 0.2s ease;
+}
+
+.version:hover {
+  background-color: rgb(221, 221, 221);
+  transform: scale(1.1);
+  cursor: pointer;
 }
 
 .mediaFlowConfig {
